Fix ten P1 review findings: LWS endpoint, scan lifecycle, iterator bounds, cross-store joins, spatial cover
BG-35 (+BG-227): BGSparqlService reported every failure as a 500 and treated the reader as unhealthy, so a client disconnect or a failed SERVICE call invalidated the pooled BeakGraph. Failures are now classified: parse errors 400, cancelled/timed-out 503, query-evaluation errors (QueryException) 400, and only genuine internal errors 500 with the reader marked unhealthy; a response that already failed is logged at debug and dropped. Output is deferred until 16 KB have been written so early failures still get a real status. LWSSparqlPoolHealthTest.

BG-33: LWSStorageServlet resolved SPARQL relative IRIs against the static base and reported ".meta" links under it; requests now resolve against the live request origin. LWSLiveBaseTest.

BG-403: metadata was generated once at startup, so files added later were unservable. LWSMetadataRefresher rescans on a schedule (beakgraph.lws.refresh.seconds, default 30 s), on demand when an unknown path is requested, and publishes a new model atomically; the Fuseki dataset reads through CurrentModelGraph so /rdf sees the swap. Cache files are written atomically and excluded from the tree signature. LWSMetadataRefreshTest, SPARQLEndPointReadOnlyTest.

BG-36 (+BG-443): every advertised absolute URI was minted on http://localhost:<port>/. URIs now derive from the request (Host, X-Forwarded-* honoured via ForwardedRequestCustomizer) or from the new -base parameter for deployments behind a proxy. The root linkset link no longer reads "http://host:port.meta". LWSDataResourceRepresentationTest, LWSLiveBaseTest; docs/INSTRUCTIONS.md.

BG-207 (+BG-57): a chunk worker dying with an Error (OutOfMemoryError, AssertionError) slipped past ParallelScan's catch, still counted itself out with END, and the consumer finished normally with rows missing; and the consumer could observe stop before the recorded failure and end the scan as if closed. W